--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ p { color: black; font-size: 1.5rem; margin-top: 5px; line-height: 2.5rem; font-
 
 .call_to_action:hover { color: #FFFFFF; background-color: #496D96; }
 
-div.brand h1.brand_title { font-size: 1.2em; text-transform: uppercase; color: #B1BECD; margin-left: 10px; }
+div.brand h1.brand_title { font-size: 1.3em; text-transform: uppercase; color: #B1BECD; margin-left: 10px; }
 
 div.brand h1.brand_title span.brand_span { color: #496D96; }
 
@@ -421,99 +421,51 @@ section#footer div.footer p { color: #B1BECD; font-size: 1.1rem; font-weight: 40
 
     /* Main Header Menu */
 
-    #header .nav-list ul li:hover a {
-        font-size: 2.3rem;
-    }
+    section#header div.header div.nav_bar div.nav_list ul li:hover a { font-size: 2.3rem; }
 
-    #header .nav-list ul li a.active {
-        font-size: 2.3rem;
-    }
+    section#header div.header div.nav_bar div.nav_list ul li a.active { font-size: 2.3rem; }
 
-    #header .hamburger {
-        display: none;
-    }
+    section#header div.header div.nav_bar div.nav_list div.hamburger { display: none; }
 
-    #header .nav-list ul {
-        position: initial;
-        display: block;
-        height: auto;
-        width: fit-content;
-        background-image: none;
+    section#header div.header div.nav_bar div.nav_list ul { position: initial; display: block; height: auto; width: fit-content; background-image: none; }
 
-    }
+    section#header div.header div.nav_bar div.nav_list ul li { display: inline-block; }
 
-    #header .nav-list ul li {
-        display: inline-block;
-    }
+    section#header div.header div.nav_bar div.nav_list ul li a { font-size: 1.7rem; }
 
-    #header .nav-list ul li a {
-        font-size: 1.7rem;
-    }
-
-    #header .nav-list ul a:after {
-        display: none;
-    }
+    section#header div.header div.nav_bar div.nav_list ul a::after { display: none; }
 
     /* End Main Header Menu */
 
     /* Services Section */
 
-    #services .service-top p {
-        font-size: 1.8rem;
-    }
+    section#services div.services div.service_top p { font-size: 1.8rem; }
 
-    #services .service-bottom .service-item {
-        flex-basis: 22%;
-        margin: 1.5%;
-        min-height: 440px;
-    }
+    section#services div.services div.service_bottom div.service_item { flex-basis: 22%; margin: 1.5%; min-height: 440px; }
 
     /* End Services Section */
 
     /* Projects Section */
 
-    #projects .projects-header p {
-        font-size: 1.8rem;
-    }
+    section#projects div.projects div.projects_header p { font-size: 1.8rem; }
 
     /* End Projects Section */
 
     /* Contact Section */
 
-    #contact .contact p {
-        font-size: 1.8rem;
-    }
+    section#contact div.contact div p { font-size: 1.8rem; }
 
-    #contact .contact {
-        max-width: 1000px;
-        flex-direction: column;
-        padding: 100px 0;
-        align-items: center;
-        justify-content: center;
-        min-width: 20vh;
-    }
+    section#contact div.contact { max-width: 1000px; flex-direction: column; padding: 100px 0; align-items: center; justify-content: center; min-width: 20vh; }
 
-    #contact .contact-items {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        align-items: center;
-        margin: 50px;
-    }
+    section#contact div.contact div.contact_items { width: 100%; display: flex; flex-direction: row; justify-content: space-evenly; align-items: center; margin: 50px; }
 
     /* End Contact Section */
 
     /* Footer Section */
 
-    #footer .social-item img {
-        transition: .2s ease;
-        transition-property: transform;
-    }
+    section#footer div.footer div.social_icon div.social_item img { transition: .2s ease; transition-property: transform; }
     
-    #footer .social-item:hover img {
-        transform: scale(1.2);
-    }
+    section#footer div.footer div.social_icon div.social_item:hover img { transform: scale(1.2); }
 
     /* End Footer Section */
 
